[package]
name = "beta"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
flate2.workspace = true
flox-rust-sdk.workspace = true
fslock.workspace = true
futures.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
flox-rust-sdk = { workspace = true, features = ["tests"] }
httpmock.workspace = true
pretty_assertions.workspace = true
temp-env = { workspace = true, features = ["async_closure"] }
tempfile.workspace = true
