[package]
name = "catalog-api-v1"
version = "0.0.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["httpmock", "regex"]

[dependencies]
progenitor-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regress.workspace = true
regex = { workspace = true, optional = true }
httpmock = { workspace = true, optional = true }
sentry.workspace = true

[build-dependencies]
prettyplease.workspace = true
progenitor.workspace = true
serde_json.workspace = true
syn.workspace = true
openapiv3.workspace = true

[dev-dependencies]

[features]
# allow exporting test helpers in dev mode only
tests = ["httpmock", "regex"]
