[package]
name = "factory-api-v1"
version.workspace = true
edition.workspace = true

[dependencies]
progenitor-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[build-dependencies]
prettyplease.workspace = true
progenitor.workspace = true
serde_json.workspace = true
syn.workspace = true
openapiv3.workspace = true
