[package]
name = "flox-activations"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
backtrace = "0.3"
chrono.workspace = true
clap = { version = "4.5.49", default-features = false, features = [
    "std",
    "usage",
    "help",
    "error-context",
    "derive",
] }
dirs.workspace = true
env_logger = { version = "0.11.8", default-features = false, features = ["color"] }
flox-core.workspace = true
fslock.workspace = true
is_executable.workspace = true
itertools.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
serde_json.workspace = true
shell-escape.workspace = true
signal-hook.workspace = true
tempfile.workspace = true
time.workspace = true
indoc.workspace = true


[dev-dependencies]
nix.workspace = true
temp-env.workspace = true
pretty_assertions.workspace = true
