[package]
name = "flox-activations"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.54", default-features = false, features = [
    "std",
    "usage",
    "help",
    "error-context",
    "derive",
] }
env_logger = { version = "0.11.8", default-features = false }
flox-core.workspace = true
fslock.workspace = true
log.workspace = true
time.workspace = true
indoc.workspace = true


[dev-dependencies]
nix.workspace = true
tempfile.workspace = true
temp-env.workspace = true
pretty_assertions.workspace = true
