[package]
name = "flox-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream.workspace = true
catalog-api-v1.workspace = true
derive_more.workspace = true
enum_dispatch.workspace = true
futures.workspace = true
http.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

httpmock.workspace = true
serde_yaml.workspace = true

# Optional dependencies for GSSAPI/Kerberos authentication
libgssapi = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
itertools.workspace = true
proptest.workspace = true
sentry.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
tests = []
# Catalog authentication strategy
# Kerberos authentication is available when this feature is enabled
floxhub-authn-kerberos = ["dep:libgssapi", "dep:base64"]
