[package]
name = "flox-config"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
flox-core.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
tracing.workspace = true
url.workspace = true
xdg.workspace = true

[dev-dependencies]
indoc.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
serde_json.workspace = true
temp-env.workspace = true
tempfile.workspace = true
