[package]
name = "flox-core"
version = "0.0.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["proptest"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
derive_more.workspace = true
fslock.workspace = true
log.workspace = true
# should be a dev-dependency but test doesn't apply across crates
proptest = { optional = true, workspace = true }
# should be a dev-dependency but test doesn't apply across crates
proptest-derive = { optional = true, workspace = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tempfile.workspace = true
time.workspace = true
thiserror.workspace = true
schemars.workspace = true
regex.workspace = true
serde_with.workspace = true
shell-escape.workspace = true


[features]
default = ["proc_status"]
proc_status = []
tests = [
    "dep:proptest",
    "dep:proptest-derive",
]
