[package]
name = "flox-core"
version = "0.0.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["proptest"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
crossterm.workspace = true
derive_more.workspace = true
fslock.workspace = true
log.workspace = true
# should be a dev-dependency but test doesn't apply across crates
proptest.workspace = true
# should be a dev-dependency but test doesn't apply across crates
proptest-derive.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
shell_gen = { path = "../shell_gen" }
supports-color.workspace = true
sysinfo.workspace = true
tracing.workspace = true
tempfile.workspace = true
time.workspace = true
thiserror.workspace = true
schemars.workspace = true
uuid.workspace = true

[dev-dependencies]
indoc.workspace = true

[features]
default = ["proc_status"]
proc_status = []
tests = []
