[package]
name = "flox-core"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["proptest"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
crossterm.workspace = true
derive_more.workspace = true
fslock.workspace = true
itertools.workspace = true
log.workspace = true
# should be a dev-dependency but test doesn't apply across crates
proptest = { optional = true, workspace = true }
# should be a dev-dependency but test doesn't apply across crates
proptest-derive = { optional = true, workspace = true }
regex.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape.workspace = true
shell_gen = { path = "../shell_gen" }
supports-color.workspace = true
sysinfo.workspace = true
serde_with.workspace = true
schemars.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
indoc.workspace = true

[features]
default = ["proc_status"]
proc_status = []
tests = [
    "dep:proptest",
    "dep:proptest-derive",
]
