[package]
name = "flox-package-builder"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
derive_more.workspace = true
flox-rust-sdk.workspace = true
indexmap.workspace = true
itertools.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tokio.workspace = true
tempfile.workspace = true

daggy.version = "0.8"
tar.version = "0.4"

[dev-dependencies]
pretty_assertions.workspace = true
flox-rust-sdk = { workspace = true, features = ["tests"] }

[features]
