[package]
name = "flox-rust-sdk"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream.workspace = true
catalog-api-v1.workspace = true
chrono.workspace = true
derive_more.workspace = true
enum_dispatch.workspace = true
fslock.workspace = true
futures.workspace = true
flox-core.workspace = true
indent.workspace = true
indexmap.workspace = true
indoc.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
nix = {workspace = true, features = ["signal"]}
once_cell.workspace = true
pollster.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_with.workspace = true
serde.workspace = true
shell-escape.workspace = true
temp-env.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
url-escape.workspace = true
uuid.workspace = true
walkdir.workspace = true
xdg.workspace = true
serial_test = { workspace = true, features = ["file_locks"] }

[dev-dependencies]
anyhow.workspace = true
goblin = "0.8.2"
httpmock.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
serial_test.workspace = true

[features]
# allow exporting test helpers in dev mode only
tests = []
extra-tests = ["impure-unit-tests"]
impure-unit-tests = []
