[package]
name = "flox-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
# rexpect.workspace = true
tempfile.workspace = true
nix.workspace = true
indoc.workspace = true
dirs.workspace = true
proptest.workspace = true
chrono.workspace = true

# flox-core = { workspace = true, features = ["proc_status"]}

# [patches.crates-io]
# rexpect = { path = "/home/zmitchell/src/rexpect" }
