[package]
name = "flox-test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
# rexpect.workspace = true
tempfile.workspace = true
nix.workspace = true
indoc.workspace = true
dirs.workspace = true
proptest.workspace = true
chrono.workspace = true

# flox-core = { workspace = true, features = ["proc_status"]}

# [patches.crates-io]
# rexpect = { path = "/home/zmitchell/src/rexpect" }
