[package]
name = "flox-watchdog"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_derive.workspace = true
flox-rust-sdk.workspace = true
glob = "0.3.1"
nix.workspace = true
once_cell.workspace = true
sentry.workspace = true
serde.workspace = true
signal-hook.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
kqueue.workspace = true

[dev-dependencies]
filetime = "0.2.25"
tempfile.workspace = true
serde_json.workspace = true
