[package]
name = "flox-watchdog"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
flox-core.workspace = true
fslock.workspace = true
glob = "0.3.3"
nix.workspace = true
signal-hook.workspace = true
time.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
kqueue.workspace = true

[dev-dependencies]
filetime = "0.2.26"
tempfile.workspace = true
serde_json.workspace = true
flox-activations.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
procfs = "0.18.0"
