[package]
name = "flox"
version = "0.0.0"
edition = "2024"

[package.metadata.cargo-machete]
ignored = ["sapling-renderdag"]

[dependencies]
anyhow.workspace = true
bpaf.workspace = true
chrono.workspace = true
config.workspace = true
close_fds.workspace = true
crossterm.workspace = true
derive_more.workspace = true
dirs.workspace = true
flox-rust-sdk.workspace = true
fslock.workspace = true
futures.workspace = true
indent.workspace = true
indicatif.workspace = true
indoc.workspace = true
inquire.workspace = true
itertools.workspace = true
nix.workspace = true
oauth2.workspace = true
path-dedot.workspace = true
pollster.workspace = true
reqwest.workspace = true
semver.workspace = true
regex.workspace = true
sentry.workspace = true
serde_json.workspace = true
serde.workspace = true
slug.workspace = true
supports-color.workspace = true
sys-info.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
textwrap.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
xdg.workspace = true
flox-core.workspace = true
sapling-renderdag = "0.1.0"
shell_gen = { path = "../shell_gen" }
minus = { version = "5.6.1", features = ["static_output", "search"] }
nef-lock-catalog.workspace = true

[dev-dependencies]
catalog-api-v1.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
serde_with.workspace = true
serial_test.workspace = true
temp-env = { workspace = true, features = ["async_closure"] }
tempfile.workspace = true
toml.workspace = true
flox-rust-sdk = { workspace = true, features = ["tests"] }
flox-test-utils.workspace = true


[features]
extra-tests = ["impure-unit-tests"]
impure-unit-tests = []
