[package]
name = "flox"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["sapling-renderdag"]

[dependencies]
anstream.workspace = true
anyhow.workspace = true
beta.workspace = true
bpaf.workspace = true
chrono.workspace = true
close_fds.workspace = true
crossterm.workspace = true
derive_more.workspace = true
dirs.workspace = true
enum_dispatch.workspace = true
floxhub-client.workspace = true
flox-rust-sdk.workspace = true
fslock.workspace = true
futures.workspace = true
indent.workspace = true
indicatif.workspace = true
indoc.workspace = true
inquire.workspace = true
itertools.workspace = true
keyring-core.workspace = true
nix.workspace = true
oauth2.workspace = true
path-dedot.workspace = true
pollster.workspace = true
reqwest.workspace = true
semver.workspace = true
regex.workspace = true
sentry.workspace = true
serde_json.workspace = true
serde.workspace = true
shell-escape.workspace = true
slug.workspace = true
strum.workspace = true
supports-color.workspace = true
sys-info.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
textwrap.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
xdg.workspace = true
flox-core.workspace = true
flox-config.workspace = true
flox-activations.workspace = true
flox-events.workspace = true
sapling-renderdag = "0.1.0"
shell_gen = { path = "../shell_gen" }
minus = { version = "5.6.1", features = ["static_output", "search"] }
nef-lock-catalog.workspace = true
flox-manifest.workspace = true

# Select the OS keyring backend per target so no new native library is linked.
# macOS uses the Keychain via `security-framework` (already satisfied by the
# Darwin SDK); Linux talks to the Secret Service over pure-Rust `zbus`
# (`crypto-rust`), so the Nix build needs no extra `buildInputs`/`pkg-config`
# entries. Depending on the store crates per-target (rather than the `keyring`
# umbrella crate) keeps the Windows store — and its `windows-sys` resolution —
# out of the dependency graph entirely.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store.workspace = true

[dev-dependencies]
factory-api-v1.workspace = true
flox-events = { workspace = true, features = ["tests"] }
floxhub-client = { workspace = true, features = ["tests"] }
httpmock.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
serde_with.workspace = true
serial_test.workspace = true
temp-env = { workspace = true, features = ["async_closure"] }
tempfile.workspace = true
toml.workspace = true
flox-rust-sdk = { workspace = true, features = ["tests"] }
flox-test-utils.workspace = true
flox-core = { workspace = true, features = ["tests"] }
flox-manifest = { workspace = true, features = [ "tests" ]}


[features]
extra-tests = ["impure-unit-tests"]
impure-unit-tests = []
