[package]
name = "klaus"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_derive.workspace = true
flox-rust-sdk.workspace = true
nix.workspace = true
once_cell.workspace = true
sentry.workspace = true
serde.workspace = true
signal-hook.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
