[package]
name = "mk_data"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
fs_extra.workspace = true
indicatif.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
