[package]
name = "nef-lock-catalog"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
url.workspace = true
serde_json.workspace = true
toml.workspace = true
serde.workspace = true
indexmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
flox-catalog = { path = "../flox-catalog" }
tokio.workspace = true
